k8s/02-services.yml
apiVersion: v1
kind: Service
metadata:
  name: app-desafio-utn-k8s
spec:
  type: ClusterIP
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    app: app-desafio-utn-k8s
