k8s/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: utn-k8s.chicho.com.ar
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - utn-k8s.chicho.com.ar
    secretName: letsencrypt-utn-k8s
  rules:
  - host: "utn-k8s.chicho.com.ar"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app-desafio-utn-k8s
            port:
              number: 5000
